# dora

./: README.md
backend/: .env.example  .gitignore  .pylintrc  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
backend/requirements/: api.txt  base.txt  dev.txt  worker.txt
backend/scripts/: init_db.py  seed_data.py
backend/src/: __init__.py
backend/src/api/: README.md  __init__.py  main.py  routes.py
backend/src/api/dependencies/: __init__.py  auth.py  database.py  pagination.py  services.py
backend/src/api/handlers/: __init__.py  auth_handler.py  cluster_handler.py  content_handler.py  health_handler.py
backend/src/api/middleware/: __init__.py  error_handler.py  logging_middleware.py  rate_limiter.py
backend/src/api/postman/: Dora_API.postman_collection.json  Dora_Local.postman_environment.json
backend/src/config/: __init__.py  database.py  logging.py  settings.py
backend/src/shared/: __init__.py
backend/src/shared/adapters/: __init__.py  database.py  openai_adapter.py  redis_adapter.py  sqs_adapter.py  storage.py  vector_db.py
backend/src/shared/core/: __init__.py  exceptions.py  logging.py
backend/src/shared/db/: __init__.py  session.py
backend/src/shared/migrations/: env.py
backend/src/shared/migrations/versions/: 20241211_000000_001_initial_schema.py
backend/src/shared/models/: __init__.py  base.py  cluster.py  cluster_membership.py  enums.py  processing_job.py  shared_content.py  user.py  user_content_save.py
backend/src/shared/repositories/: __init__.py  base.py  cluster_repository.py  processing_job_repository.py  shared_content_repository.py  user_content_save_repository.py  user_repository.py
backend/src/shared/schemas/: __init__.py  cluster.py  common.py  content.py  user.py
backend/src/shared/services/: __init__.py  auth_service.py  cluster_service.py  clustering_service.py  content_service.py  embedding_service.py  url_service.py
backend/src/shared/utils/: __init__.py  constants.py  exceptions.py  logger.py  security.py  validators.py
backend/src/worker/: __init__.py  consumer.py  main.py
backend/src/worker/pipelines/: __init__.py  clustering_pipeline.py  content_pipeline.py
backend/src/worker/processors/: __init__.py  analyze_processor.py  base_processor.py  cluster_processor.py  ingest_processor.py
backend/src/worker/scrapers/: __init__.py  base_scraper.py  generic_scraper.py  instagram_scraper.py  youtube_scraper.py
backend/tests/: conftest.py
backend/tests/fixtures/: .gitkeep
backend/tests/integration/: .gitkeep
backend/tests/unit/: .gitkeep
docs/implementation-guide/: 03-ai-pipelines.md  04-worker-architecture.md  api.md  core-entities.md
