[project]
name = "dora"
version = "1.0.0"
description = "AI-Powered Second Brain for Content"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
exclude = [".git", ".venv", "alembic", "migrations"]

[tool.pylint.main]
# Exclude migrations - Alembic uses runtime proxies and specific naming conventions
# that conflict with pylint's static analysis
ignore-paths = ["src/shared/migrations"]

[tool.pylint."messages control"]
# Disable checks that don't apply well to this codebase
disable = [
    "too-few-public-methods", # Pydantic/SQLAlchemy models often have few methods
    "duplicate-code",         # Common patterns in repositories/schemas
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
